##############################################################################
# CMake
##############################################################################

cmake_minimum_required(VERSION 2.8.3)
project(flask_ext_catkin)

##############################################################################
# Catkin
##############################################################################

find_package(catkin REQUIRED)
catkin_python_setup()
catkin_package()
