<package>
  <name>flask_ext_catkin</name>
  <version>0.1.0</version>
  <description>
    Catkinized version of flask extensions python packages
  </description>
  <maintainer email="asmodehn@gmail.com">AlexV</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/asmodehn/flask-ext-catkin</url>
  <url type="repository">https://github.com/asmodehn/flask-ext-catkin</url>
  <url type="bugtracker">https://github.com/asmodehn/flask-ext-catkin/issues</url>
  <author>AlexV</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python-catkin-pkg</build_depend>
  <build_depend>python-flask</build_depend>
  <build_depend>python-itsdangerous</build_depend>
  <build_depend>python-passlib</build_depend>
  <build_depend>python-alembic</build_depend>

  <run_depend>python-flask</run_depend>
  <run_depend>python-itsdangerous</run_depend>
  <run_depend>python-passlib</run_depend>
  <run_depend>python-alembic</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
